--- a/src/less/index_L01.less
+++ b/src/less/index_L01.less
@@ -94,18 +94,20 @@
     position:relative;
     overflow: hidden;
     .page3-5 {
+        background:#f35f6d;
         background-image: url('../images/page4_1.png');
         .px2rem(width,187);
         .px2rem(height,47);
         margin:0 auto;
         .px2rem(margin-top,55);
         background-size: contain;
+        
     }
     .map {
-        .px2rem(width,630);
-        .px2rem(height,380);
+        .px2rem(width,580);
+        .px2rem(height,300);
         margin:0 auto;
-        .px2rem(margin-top,75);
+        .px2rem(margin-top,30);
         #map-container {
             width:100%;
             height:100%;
@@ -115,15 +117,19 @@
         text-align: center;
         a {
             text-decoration: none;
+            background-color: #f35f6d;
             .px2rem(margin-top,40);
             .px2px(font-size,28);
-            display:block;
+            .px2rem(padding,10);
+            display:inline-block;
+            color:#fff;
         }
     }
-    .page3-info {
+    .data-info {
         .px2rem(margin-top,20);
         .px2px(font-size,28);
         text-align: center;
+        color:#000;
         div {
             .px2rem(margin-bottom,40);
         }
@@ -172,6 +178,7 @@
         }
     }
     .page5-5 {
+        background:#f35f6d;
         background-image: url('../images/page5_5.png');
         .px2rem(width,188);
         .px2rem(height,46);
@@ -339,7 +346,18 @@
         }
     }
 }
-
+//-----------img-wrap
+.img-wrap {
+    height:100%;
+    background-image: url('../images/L01_bg1.jpg');
+    background-size: 100% 100%;
+    position:relative;
+    overflow: hidden;
+    display:flex;
+    div {
+        margin:auto;
+    }
+}
 //--------------page5-wrap-----------
 .page5-wrap {
     height:100%;
