--- a/src/less/index_L02.less
+++ b/src/less/index_L02.less
@@ -52,22 +52,10 @@
         }
     }
 }
-//---------------page2-wrap--------------------
-.page2-wrap {
-    .page2-1 {
-        .px2rem(width,680);
-        margin:0 auto;
-        .px2rem(margin-top,20);
-    }
-    .page2-2 {
-        .px2rem(margin-top,100);
-        .px2rem(margin-left,100);
-    }
-}
-
 //---------------page3-wrap--------------------
 .page3-wrap {
     .page3-5 {
+        background:#0c80bc;
         background-image: url('../images/page4_1.png');
         .px2rem(width,187);
         .px2rem(height,47);
@@ -76,10 +64,10 @@
         background-size: contain;
     }
     .map {
-        .px2rem(width,630);
-        .px2rem(height,380);
+        .px2rem(width,580);
+        .px2rem(height,300);
         margin:0 auto;
-        .px2rem(margin-top,75);
+        .px2rem(margin-top,30);
         #map-container {
             width:100%;
             height:100%;
@@ -91,14 +79,17 @@
             text-decoration: none;
             .px2rem(margin-top,40);
             .px2px(font-size,28);
-            display:block;
+            .px2rem(padding,10);
+            background:#0c80bc;
+            color:#fff;
+            display:inline-block;
         }
     }
-    .page3-info {
+    .data-info {
         .px2rem(margin-top,20);
         .px2px(font-size,28);
+        color:#0c80bc;
         text-align: center;
-        color:red;
         div {
             .px2rem(margin-bottom,40);
         }
@@ -141,6 +132,7 @@
         }
     }
     .page5-5 {
+        background:#0c80bc;
         background-image: url('../images/page5_5.png');
         .px2rem(width,188);
         .px2rem(height,46);
@@ -342,6 +334,16 @@
     }
     .android-down {
         background-image: url('../images/android_down.png');
+    }
+}
+//-----------img-wrap
+.img-wrap {
+    height:100%;
+    overflow: hidden;
+    width:100%;
+    display:flex;
+    div {
+        margin:auto;
     }
 }
 //************************动画*****************************
