--- a/src/less/index_h01.less
+++ b/src/less/index_h01.less
@@ -101,7 +101,7 @@
     }
     .page1-2 {
         position:absolute;
-        .px2rem(top,280);
+        .px2rem(top,200);
         left:0;
         width:100%;
          img {
@@ -111,7 +111,7 @@
     }
     .page1-3 {
         position: absolute;
-        .px2rem(top, 150);
+        .px2rem(top, 100);
         left:0;
         width:100%;
         img {
@@ -132,7 +132,7 @@
 
     .page1-5 {
         position: absolute;
-        .px2rem(top, 520);
+        .px2rem(top, 400);
         left:0;
         width:100%;
 
@@ -144,11 +144,12 @@
         .px2rem(margin-top,80);
         .marrier {
             .px2px(font-size,48);
+            .px2rem(margin-bottom,50)
         }
     }
     .page1-6 {
         position: absolute;
-        .px2rem(bottom, 420);
+        .px2rem(bottom, 330);
         left:0;
         width:100%;
         img {
@@ -158,7 +159,7 @@
     }
     .page1-7 {
         position: absolute;
-        .px2rem(bottom, 370);
+        .px2rem(bottom, 250);
         left:0;
         width:100%;
         text-align: center;
@@ -201,12 +202,11 @@
         background-size: contain;
     }
     .map {
-        .px2rem(width,630);
-        .px2rem(height,380);
+        .px2rem(width,580);
+        .px2rem(height,300);
         margin:0 auto;
-        .px2rem(margin-top,75);
+        .px2rem(margin-top,30);
         #map-container {
-            .px2rem(border-radius, 40);
             width:100%;
             height:100%;
         }
@@ -226,7 +226,7 @@
             display:block;
         }
     }
-    .page3-info {
+    .data-info {
         .px2rem(margin-top,20);
         .px2px(font-size,28);
         text-align: center;
@@ -274,7 +274,9 @@
         }
     }
     .page5-5 {
-        background-image: url('../images/page5_5.png');
+        background: rgba(256,32,32,0.3) url('../images/page5_5.png');
+        box-shadow: 0 0 5px 15px rgba(256,32,32,0.3);
+        border-radius: 5px;
         .px2rem(width,188);
         .px2rem(height,46);
         margin:0 auto;
@@ -482,6 +484,16 @@
     }
     .android-down {
         background-image: url('../images/android_down.png');
+    }
+}
+//-----------img-wrap
+.img-wrap {
+    height:100%;
+    overflow: hidden;
+    width:100%;
+    display:flex;
+    div {
+        margin:auto;
     }
 }
 //************************动画*****************************
