--- a/src/less/index_h03.less
+++ b/src/less/index_h03.less
@@ -108,7 +108,7 @@
     }
     .page1-6 {
         position: absolute;
-        .px2rem(bottom, 420);
+        .px2rem(bottom, 290);
         left:0;
         width:100%;
         img {
@@ -118,7 +118,7 @@
     }
     .page1-7 {
         position: absolute;
-        .px2rem(bottom, 370);
+        .px2rem(bottom, 270);
         left:0;
         width:100%;
         text-align: center;
@@ -159,12 +159,11 @@
         background-size: contain;
     }
     .map {
-        .px2rem(width,630);
-        .px2rem(height,380);
+        .px2rem(width,580);
+        .px2rem(height,300);
         margin:0 auto;
-        .px2rem(margin-top,75);
+        .px2rem(margin-top,30);
         #map-container {
-            .px2rem(border-radius, 40);
             width:100%;
             height:100%;
         }
@@ -184,7 +183,7 @@
             display:block;
         }
     }
-    .page3-info {
+    .data-info {
         .px2rem(margin-top,20);
         .px2px(font-size,28);
         text-align: center;
@@ -442,6 +441,16 @@
     }
     .android-down {
         background-image: url('../images/android_down.png');
+    }
+}
+//-----------img-wrap
+.img-wrap {
+    height:100%;
+    overflow: hidden;
+    width:100%;
+    display:flex;
+    div {
+        margin:auto;
     }
 }
 //************************动画*****************************
