--- a/src/less/index_h04.less
+++ b/src/less/index_h04.less
@@ -130,12 +130,11 @@
         background-size: contain;
     }
     .map {
-        .px2rem(width,630);
-        .px2rem(height,380);
+        .px2rem(width,580);
+        .px2rem(height,300);
         margin:0 auto;
-        .px2rem(margin-top,75);
+        .px2rem(margin-top,30);
         #map-container {
-            .px2rem(border-radius, 40);
             width:100%;
             height:100%;
         }
@@ -155,7 +154,7 @@
             display:block;
         }
     }
-    .page3-info {
+    .data-info {
         .px2rem(margin-top,20);
         .px2px(font-size,28);
         text-align: center;
@@ -413,6 +412,16 @@
     }
     .android-down {
         background-image: url('../images/android_down.png');
+    }
+}
+//-----------img-wrap
+.img-wrap {
+    height:100%;
+    overflow: hidden;
+    width:100%;
+    display:flex;
+    div {
+        margin:auto;
     }
 }
 //************************动画*****************************
